crates/gmsh/include/gmshc.h


GMSH_API void gmshModelMeshGetElementProperties(const int elementType,
                                                char **elementName,
                                                int *dim,
                                                int *order,
                                                int *numNodes,
                                                double **localNodeCoord, size_t *localNodeCoord_n,
                                                int *numPrimaryNodes,
                                                int *ierr);
GMSH_API void gmshModelMeshGetElementsByType(const int elementType,
                                             size_t **elementTags, size_t *elementTags_n,
                                             size_t **nodeTags, size_t *nodeTags_n,
                                             const int tag,
                                             const size_t task,
                                             const size_t numTasks,
                                             int *ierr);
GMSH_API void gmshModelMeshGetMaxElementTag(size_t *maxTag,
                                            int *ierr);
GMSH_API void gmshModelMeshPreallocateElementsByType(const int elementType,
                                                     const int elementTag,
                                                     const int nodeTag,
                                                     size_t **elementTags, size_t *elementTags_n,
                                                     size_t **nodeTags, size_t *nodeTags_n,
                                                     const int tag,
                                                     int *ierr);
GMSH_API void gmshModelMeshGetElementQualities(const size_t *elementTags, const size_t elementTags_n,
                                               double **elementsQuality, size_t *elementsQuality_n,
                                               const char *qualityName,
                                               const size_t task,
                                               const size_t numTasks,
                                               int *ierr);
GMSH_API void gmshModelMeshAddElements(const int dim,
                                       const int tag,
                                       const int *elementTypes, const size_t elementTypes_n,
                                       const size_t *const *elementTags, const size_t *elementTags_n, const size_t elementTags_nn,
                                       const size_t *const *nodeTags, const size_t *nodeTags_n, const size_t nodeTags_nn,
                                       int *ierr);
GMSH_API void gmshModelMeshAddElementsByType(const int tag,
                                             const int elementType,
                                             const size_t *elementTags, const size_t elementTags_n,
                                             const size_t *nodeTags, const size_t nodeTags_n,
                                             int *ierr);
GMSH_API void gmshModelMeshGetIntegrationPoints(const int elementType,
                                                const char *integrationType,
                                                double **localCoord, size_t *localCoord_n,
                                                double **weights, size_t *weights_n,
                                                int *ierr);
GMSH_API void gmshModelMeshGetJacobians(const int elementType,
                                        const double *localCoord, const size_t localCoord_n,
                                        double **jacobians, size_t *jacobians_n,
                                        double **determinants, size_t *determinants_n,
                                        double **coord, size_t *coord_n,
                                        const int tag,
                                        const size_t task,
                                        const size_t numTasks,
                                        int *ierr);
GMSH_API void gmshModelMeshPreallocateJacobians(const int elementType,
                                                const int numEvaluationPoints,
                                                const int allocateJacobians,
                                                const int allocateDeterminants,
                                                const int allocateCoord,
                                                double **jacobians, size_t *jacobians_n,
                                                double **determinants, size_t *determinants_n,
                                                double **coord, size_t *coord_n,
                                                const int tag,
                                                int *ierr);
GMSH_API void gmshModelMeshGetJacobian(const size_t elementTag,
                                       const double *localCoord, const size_t localCoord_n,
                                       double **jacobians, size_t *jacobians_n,
                                       double **determinants, size_t *determinants_n,
                                       double **coord, size_t *coord_n,
                                       int *ierr);
GMSH_API void gmshModelMeshGetBasisFunctions(const int elementType,
                                             const double *localCoord, const size_t localCoord_n,
                                             const char *functionSpaceType,
                                             int *numComponents,
                                             double **basisFunctions, size_t *basisFunctions_n,
                                             int *numOrientations,
                                             const int *wantedOrientations, const size_t wantedOrientations_n,
                                             int *ierr);
GMSH_API void gmshModelMeshGetBasisFunctionsOrientation(const int elementType,
                                                        const char *functionSpaceType,
                                                        int **basisFunctionsOrientation, size_t *basisFunctionsOrientation_n,
                                                        const int tag,
                                                        const size_t task,
                                                        const size_t numTasks,
                                                        int *ierr);
GMSH_API void gmshModelMeshGetBasisFunctionsOrientationForElement(const size_t elementTag,
                                                                  const char *functionSpaceType,
                                                                  int *basisFunctionsOrientation,
                                                                  int *ierr);
GMSH_API int gmshModelMeshGetNumberOfOrientations(const int elementType,
                                                  const char *functionSpaceType,
                                                  int *ierr);
GMSH_API void gmshModelMeshPreallocateBasisFunctionsOrientation(const int elementType,
                                                                int **basisFunctionsOrientation, size_t *basisFunctionsOrientation_n,
                                                                const int tag,
                                                                int *ierr);
GMSH_API void gmshModelMeshGetEdges(const size_t *nodeTags, const size_t nodeTags_n,
                                    size_t **edgeTags, size_t *edgeTags_n,
                                    int **edgeOrientations, size_t *edgeOrientations_n,
                                    int *ierr);
GMSH_API void gmshModelMeshGetFaces(const int faceType,
                                    const size_t *nodeTags, const size_t nodeTags_n,
                                    size_t **faceTags, size_t *faceTags_n,
                                    int **faceOrientations, size_t *faceOrientations_n,
                                    int *ierr);
GMSH_API void gmshModelMeshCreateEdges(const int *dimTags, const size_t dimTags_n,
                                       int *ierr);
GMSH_API void gmshModelMeshCreateFaces(const int *dimTags, const size_t dimTags_n,
                                       int *ierr);
GMSH_API void gmshModelMeshGetAllEdges(size_t **edgeTags, size_t *edgeTags_n,
                                       size_t **edgeNodes, size_t *edgeNodes_n,
                                       int *ierr);
GMSH_API void gmshModelMeshGetAllFaces(const int faceType,
                                       size_t **faceTags, size_t *faceTags_n,
                                       size_t **faceNodes, size_t *faceNodes_n,
                                       int *ierr);
GMSH_API void gmshModelMeshAddEdges(const size_t *edgeTags, const size_t edgeTags_n,
                                    const size_t *edgeNodes, const size_t edgeNodes_n,
                                    int *ierr);
GMSH_API void gmshModelMeshAddFaces(const int faceType,
                                    const size_t *faceTags, const size_t faceTags_n,
                                    const size_t *faceNodes, const size_t faceNodes_n,
                                    int *ierr);
GMSH_API void gmshModelMeshGetKeys(const int elementType,
                                   const char *functionSpaceType,
                                   int **typeKeys, size_t *typeKeys_n,
                                   size_t **entityKeys, size_t *entityKeys_n,
                                   double **coord, size_t *coord_n,
                                   const int tag,
                                   const int returnCoord,
                                   int *ierr);
GMSH_API void gmshModelMeshGetKeysForElement(const size_t elementTag,
                                             const char *functionSpaceType,
                                             int **typeKeys, size_t *typeKeys_n,
                                             size_t **entityKeys, size_t *entityKeys_n,
                                             double **coord, size_t *coord_n,
                                             const int returnCoord,
                                             int *ierr);
GMSH_API int gmshModelMeshGetNumberOfKeys(const int elementType,
                                          const char *functionSpaceType,
                                          int *ierr);
GMSH_API void gmshModelMeshGetKeysInformation(const int *typeKeys, const size_t typeKeys_n,
                                              const size_t *entityKeys, const size_t entityKeys_n,
                                              const int elementType,
                                              const char *functionSpaceType,
                                              int **infoKeys, size_t *infoKeys_n,
                                              int *ierr);
GMSH_API void gmshModelMeshGetBarycenters(const int elementType,
                                          const int tag,
                                          const int fast,
                                          const int primary,
                                          double **barycenters, size_t *barycenters_n,
                                          const size_t task,
                                          const size_t numTasks,
                                          int *ierr);
GMSH_API void gmshModelMeshPreallocateBarycenters(const int elementType,
                                                  double **barycenters, size_t *barycenters_n,
                                                  const int tag,
                                                  int *ierr);
GMSH_API void gmshModelMeshGetElementEdgeNodes(const int elementType,
                                               size_t **nodeTags, size_t *nodeTags_n,
                                               const int tag,
                                               const int primary,
                                               const size_t task,
                                               const size_t numTasks,
                                               int *ierr);
GMSH_API void gmshModelMeshGetElementFaceNodes(const int elementType,
                                               const int faceType,
                                               size_t **nodeTags, size_t *nodeTags_n,
                                               const int tag,
                                               const int primary,
                                               const size_t task,
                                               const size_t numTasks,
                                               int *ierr);
GMSH_API void gmshModelMeshGetGhostElements(const int dim,
                                            const int tag,
                                            size_t **elementTags, size_t *elementTags_n,
                                            int **partitions, size_t *partitions_n,
                                            int *ierr);
GMSH_API void gmshModelMeshSetSize(const int *dimTags, const size_t dimTags_n,
                                   const double size,
                                   int *ierr);