crates/gmsh/src/bindings.rs

unsafe extern "C" {
    pub fn gmshModelMeshGetElementProperties(
        elementType: ::std::os::raw::c_int,
        elementName: *mut *mut ::std::os::raw::c_char,
        dim: *mut ::std::os::raw::c_int,
        order: *mut ::std::os::raw::c_int,
        numNodes: *mut ::std::os::raw::c_int,
        localNodeCoord: *mut *mut f64,
        localNodeCoord_n: *mut usize,
        numPrimaryNodes: *mut ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetElementsByType(
        elementType: ::std::os::raw::c_int,
        elementTags: *mut *mut usize,
        elementTags_n: *mut usize,
        nodeTags: *mut *mut usize,
        nodeTags_n: *mut usize,
        tag: ::std::os::raw::c_int,
        task: usize,
        numTasks: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetMaxElementTag(maxTag: *mut usize, ierr: *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn gmshModelMeshPreallocateElementsByType(
        elementType: ::std::os::raw::c_int,
        elementTag: ::std::os::raw::c_int,
        nodeTag: ::std::os::raw::c_int,
        elementTags: *mut *mut usize,
        elementTags_n: *mut usize,
        nodeTags: *mut *mut usize,
        nodeTags_n: *mut usize,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetElementQualities(
        elementTags: *const usize,
        elementTags_n: usize,
        elementsQuality: *mut *mut f64,
        elementsQuality_n: *mut usize,
        qualityName: *const ::std::os::raw::c_char,
        task: usize,
        numTasks: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshAddElements(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        elementTypes: *const ::std::os::raw::c_int,
        elementTypes_n: usize,
        elementTags: *const *const usize,
        elementTags_n: *const usize,
        elementTags_nn: usize,
        nodeTags: *const *const usize,
        nodeTags_n: *const usize,
        nodeTags_nn: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshAddElementsByType(
        tag: ::std::os::raw::c_int,
        elementType: ::std::os::raw::c_int,
        elementTags: *const usize,
        elementTags_n: usize,
        nodeTags: *const usize,
        nodeTags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetIntegrationPoints(
        elementType: ::std::os::raw::c_int,
        integrationType: *const ::std::os::raw::c_char,
        localCoord: *mut *mut f64,
        localCoord_n: *mut usize,
        weights: *mut *mut f64,
        weights_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetJacobians(
        elementType: ::std::os::raw::c_int,
        localCoord: *const f64,
        localCoord_n: usize,
        jacobians: *mut *mut f64,
        jacobians_n: *mut usize,
        determinants: *mut *mut f64,
        determinants_n: *mut usize,
        coord: *mut *mut f64,
        coord_n: *mut usize,
        tag: ::std::os::raw::c_int,
        task: usize,
        numTasks: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshPreallocateJacobians(
        elementType: ::std::os::raw::c_int,
        numEvaluationPoints: ::std::os::raw::c_int,
        allocateJacobians: ::std::os::raw::c_int,
        allocateDeterminants: ::std::os::raw::c_int,
        allocateCoord: ::std::os::raw::c_int,
        jacobians: *mut *mut f64,
        jacobians_n: *mut usize,
        determinants: *mut *mut f64,
        determinants_n: *mut usize,
        coord: *mut *mut f64,
        coord_n: *mut usize,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetJacobian(
        elementTag: usize,
        localCoord: *const f64,
        localCoord_n: usize,
        jacobians: *mut *mut f64,
        jacobians_n: *mut usize,
        determinants: *mut *mut f64,
        determinants_n: *mut usize,
        coord: *mut *mut f64,
        coord_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetBasisFunctions(
        elementType: ::std::os::raw::c_int,
        localCoord: *const f64,
        localCoord_n: usize,
        functionSpaceType: *const ::std::os::raw::c_char,
        numComponents: *mut ::std::os::raw::c_int,
        basisFunctions: *mut *mut f64,
        basisFunctions_n: *mut usize,
        numOrientations: *mut ::std::os::raw::c_int,
        wantedOrientations: *const ::std::os::raw::c_int,
        wantedOrientations_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetBasisFunctionsOrientation(
        elementType: ::std::os::raw::c_int,
        functionSpaceType: *const ::std::os::raw::c_char,
        basisFunctionsOrientation: *mut *mut ::std::os::raw::c_int,
        basisFunctionsOrientation_n: *mut usize,
        tag: ::std::os::raw::c_int,
        task: usize,
        numTasks: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetBasisFunctionsOrientationForElement(
        elementTag: usize,
        functionSpaceType: *const ::std::os::raw::c_char,
        basisFunctionsOrientation: *mut ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetNumberOfOrientations(
        elementType: ::std::os::raw::c_int,
        functionSpaceType: *const ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelMeshPreallocateBasisFunctionsOrientation(
        elementType: ::std::os::raw::c_int,
        basisFunctionsOrientation: *mut *mut ::std::os::raw::c_int,
        basisFunctionsOrientation_n: *mut usize,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetEdges(
        nodeTags: *const usize,
        nodeTags_n: usize,
        edgeTags: *mut *mut usize,
        edgeTags_n: *mut usize,
        edgeOrientations: *mut *mut ::std::os::raw::c_int,
        edgeOrientations_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetFaces(
        faceType: ::std::os::raw::c_int,
        nodeTags: *const usize,
        nodeTags_n: usize,
        faceTags: *mut *mut usize,
        faceTags_n: *mut usize,
        faceOrientations: *mut *mut ::std::os::raw::c_int,
        faceOrientations_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshCreateEdges(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshCreateFaces(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetAllEdges(
        edgeTags: *mut *mut usize,
        edgeTags_n: *mut usize,
        edgeNodes: *mut *mut usize,
        edgeNodes_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetAllFaces(
        faceType: ::std::os::raw::c_int,
        faceTags: *mut *mut usize,
        faceTags_n: *mut usize,
        faceNodes: *mut *mut usize,
        faceNodes_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshAddEdges(
        edgeTags: *const usize,
        edgeTags_n: usize,
        edgeNodes: *const usize,
        edgeNodes_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshAddFaces(
        faceType: ::std::os::raw::c_int,
        faceTags: *const usize,
        faceTags_n: usize,
        faceNodes: *const usize,
        faceNodes_n: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetKeys(
        elementType: ::std::os::raw::c_int,
        functionSpaceType: *const ::std::os::raw::c_char,
        typeKeys: *mut *mut ::std::os::raw::c_int,
        typeKeys_n: *mut usize,
        entityKeys: *mut *mut usize,
        entityKeys_n: *mut usize,
        coord: *mut *mut f64,
        coord_n: *mut usize,
        tag: ::std::os::raw::c_int,
        returnCoord: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetKeysForElement(
        elementTag: usize,
        functionSpaceType: *const ::std::os::raw::c_char,
        typeKeys: *mut *mut ::std::os::raw::c_int,
        typeKeys_n: *mut usize,
        entityKeys: *mut *mut usize,
        entityKeys_n: *mut usize,
        coord: *mut *mut f64,
        coord_n: *mut usize,
        returnCoord: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetNumberOfKeys(
        elementType: ::std::os::raw::c_int,
        functionSpaceType: *const ::std::os::raw::c_char,
        ierr: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn gmshModelMeshGetKeysInformation(
        typeKeys: *const ::std::os::raw::c_int,
        typeKeys_n: usize,
        entityKeys: *const usize,
        entityKeys_n: usize,
        elementType: ::std::os::raw::c_int,
        functionSpaceType: *const ::std::os::raw::c_char,
        infoKeys: *mut *mut ::std::os::raw::c_int,
        infoKeys_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetBarycenters(
        elementType: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        fast: ::std::os::raw::c_int,
        primary: ::std::os::raw::c_int,
        barycenters: *mut *mut f64,
        barycenters_n: *mut usize,
        task: usize,
        numTasks: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshPreallocateBarycenters(
        elementType: ::std::os::raw::c_int,
        barycenters: *mut *mut f64,
        barycenters_n: *mut usize,
        tag: ::std::os::raw::c_int,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetElementEdgeNodes(
        elementType: ::std::os::raw::c_int,
        nodeTags: *mut *mut usize,
        nodeTags_n: *mut usize,
        tag: ::std::os::raw::c_int,
        primary: ::std::os::raw::c_int,
        task: usize,
        numTasks: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetElementFaceNodes(
        elementType: ::std::os::raw::c_int,
        faceType: ::std::os::raw::c_int,
        nodeTags: *mut *mut usize,
        nodeTags_n: *mut usize,
        tag: ::std::os::raw::c_int,
        primary: ::std::os::raw::c_int,
        task: usize,
        numTasks: usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshGetGhostElements(
        dim: ::std::os::raw::c_int,
        tag: ::std::os::raw::c_int,
        elementTags: *mut *mut usize,
        elementTags_n: *mut usize,
        partitions: *mut *mut ::std::os::raw::c_int,
        partitions_n: *mut usize,
        ierr: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn gmshModelMeshSetSize(
        dimTags: *const ::std::os::raw::c_int,
        dimTags_n: usize,
        size: f64,
        ierr: *mut ::std::os::raw::c_int,
    );
}
